--- a/app/views/submits/_form.html.erb
+++ b/app/views/submits/_form.html.erb
@@ -20,7 +20,7 @@
       <div class="row">
         <div class="col">
           <div class="field">
-            <%= form.label "Nombre" %>
+            <%= form.label :name, "Nombre" %>
             <div class="">
               <%= form.text_field :name %>
             </div>
@@ -39,7 +39,7 @@
 
         <div class="col">
           <div class="field">
-            <%= form.label "Empresa / Oficina" %>
+            <%= form.label :office, "Empresa / Oficina" %>
             <div class="">
               <%= form.text_field :office %>
             </div>
@@ -51,7 +51,7 @@
 
         <div class="col_full">
           <div class="field">
-            <%= form.label "Comentarios" %>
+            <%= form.label :comment,"Comentarios" %>
             <div class="">
               <%= form.text_field :comment %>
             </div>
