new text and images

--- a/app/views/registers/new.html.erb
+++ b/app/views/registers/new.html.erb
@@ -70,6 +70,25 @@
 		</div>
 	</section>
 
+	<div class="content-wrap">
+
+		<div class="container clearfix">
+
+			<div class="heading-block title-center nobottomborder">
+				<h1>¡Proximos al lanzamiento!</h1>
+				<span>Déjanos tus datos y mantente informado</span>
+			</div>
+
+			<div class="clear"></div>
+
+			<div class="progress topmargin divcenter" style="height: 10px; max-width:600px;">
+				<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+					<span class="sr-only">80% Complete</span>
+				</div>
+			</div>
+		</div>
+	</div>
+
 		<!-- Content
 	============================================= -->
 	<section id="content">
@@ -168,32 +187,40 @@
 			<div class="clear"></div>
 
 				<div id="section-faqs" class="page-section nopadding nomargin">
-					<h2 class="center font-body bottommargin-lg">Entregamos</h2>
+					<h2 class="center font-body bottommargin-lg">¿En qué consiste?</h2>
 					<div class="row topmargin-sm clearfix">
 
 						<div class="col-lg-5 offset-lg-1 col-md-6 bottommargin-sm">
-							<h4 class="font-body" style="margin-bottom:15px;">How do I become an author?</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi.</p>
+							<h4 class="font-body" style="margin-bottom:15px;">¿Por qué debería usar Spec Atelier?</h4>
+							<p>Las especificaciones técnicas son un documento de gran responsabilidad, agrupando normativas, procedimientos y soluciones constructivas, las cuales en promedio son mas de 200 por proyecto de mas de 50 proveedores.</p>
 						</div>
 						<div class="col-lg-5 col-md-6 bottommargin-sm">
-							<h4 class="font-body" style="margin-bottom:15px;">Helpful Resources for Authors</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, placeat, architecto rem dolorem dignissimos repellat veritatis in et eos doloribus magnam aliquam ipsa alias assumenda officiis quasi sapiente suscipit.</p>
+							<h4 class="font-body" style="margin-bottom:15px;">¿Qué hacemos?</h4>
+							<p>Spec Atelier es una plataforma de desarrollo de especificaciones técnicas de arquitectura, que automatiza el proceso, entregando información técnica y comercial necesaria para pasar a obra. </p>
 						</div>
 						<div class="col-lg-5 offset-lg-1 col-md-6 bottommargin-sm">
-							<h4 class="font-body" style="margin-bottom:15px;">How much money can I make?</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, fugiat iste nisi tempore nesciunt nemo fuga? Nesciunt, delectus laboriosam nisi repudiandae nam fuga saepe animi recusandae.</p>
+							<h4 class="font-body" style="margin-bottom:15px;">¿Cómo lo hacemos?</h4>
+							<p>Desarrollamos un algoritmo que nos permite, de forma intuitiva y según la particularidad de cada proyecto, poner a disposición de los arquitectos la expertise e información técnica de los proveedores de soluciones para la construcción asociados a Spec Atelier. Compilando en tiempo real las especificaciones técnicas de arquitectura.</p>
 						</div>
 						<div class="col-lg-5 col-md-6 bottommargin-sm">
-							<h4 class="font-body" style="margin-bottom:15px;">Can I offer my items for free on a promotional basis?</h4>
-							<p>Laboriosam iusto quia nulla ad voluptatibus iste beatae voluptas corrupti facilis accusamus recusandae sequi debitis reprehenderit quibusdam. Facilis eligendi a exercitationem nisi et placeat excepturi velit!</p>
+							<h4 class="font-body" style="margin-bottom:15px;">¿Que tipo de información técnica puedo encontrar?</h4>
+							<p>Buscamos agrupar la mayor cantidad de información que un proveedor pueda entregar para el correcto desarrollo de las EETT. Planos, BIM, fichas y cotizaciones.</p>
 						</div>
 						<div class="col-lg-5 offset-lg-1 col-md-6 bottommargin-sm">
-							<h4 class="font-body" style="margin-bottom:15px;">An Introduction to the Marketplaces for Authors</h4>
-							<p>Quisquam atque vero delectus corrupti! Quo, maiores, dolorem, hic commodi nulla ratione accusamus doloribus fuga magnam id temporibus dignissimos deleniti quidem ipsam corporis sapiente nam expedita saepe quas ab? Vero, assumenda.</p>
+							<h4 class="font-body" style="margin-bottom:15px;">¿Cuanto cobramos por el servicio?</h4>
+							<p>Nos encontramos en la cuenta regresiva previo al lanzamiento oficial. Luego de eso vendrá un periodo de marcha blanca con proveedores y usuarios estratégicos.</p>
 						</div>
 						<div class="col-lg-5 col-md-6">
-							<h4 class="font-body" style="margin-bottom:15px;">How does the Tuts+ Premium affiliate program work?</h4>
+							<h4 class="font-body" style="margin-bottom:15px;">¿En que etapa está la plataforma?</h4>
 							<p class="nobottommargin">Reprehenderit similique nemo voluptate ullam natus illum magnam alias nobis doloremque delectus ipsa dicta repellat maxime dignissimos eveniet quae debitis ratione assumenda tempore officiis fugiat dolor.</p>
+						</div>
+						<div class="col-lg-5 offset-lg-1 col-md-6 bottommargin-sm">
+							<h4 class="font-body" style="margin-bottom:15px;">¿Como puedo ser usuario o proveedor estrategico y participar de la marcha blanca?</h4>
+							<p class="nobottommargin">Dejanos tu correo en el formulario y te contactaremos para conversar en detalle sobre los pasos que se vienen y los plazos.</p>
+						</div>
+						<div class="col-lg-5 col-md-6">
+							<h4 class="font-body" style="margin-bottom:15px;">Experiencia</h4>
+							<p class="nobottommargin">Como equipo, nos dedicamos al desarrollo de especificaciones técnicas desde hace más de 25 años en distintos países de Latinoamérica, y desde hace  20 años en chile. Sistematizando nuestro know how en Spec Atelier.</p>
 						</div>
 					</div>
 				</div>
@@ -205,92 +232,35 @@
 
 				<div class="container topmargin bottommargin-lg center clearfix">
 
-					<h3 class="ls1 t400" style="font-size: 32px; margin-bottom: 10px;">App Screenshots</h3>
-					<p class="lead divcenter" style="max-width: 600px">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, repellendus quae fuga ad, beatae odit.</p>
+					<h3 class="ls1 t400" style="font-size: 32px; margin-bottom: 10px;">Imagenes de desarrollo</h3>
+					<p class="lead divcenter" style="max-width: 600px">Actualmente nos encontramos trabajando en la nueva interfaz. ¡Mantente al tanto!</p>
 				</div>
 
 				<div class="owl-carousel owl-carousel-full image-carousel carousel-widget bottommargin" data-margin="20" data-center="true" data-loop="true" data-nav="false" data-pagi="true" data-items-xs="2" data-items-sm="2" data-items-md="4" data-items-lg="4" data-items-xl="6" data-stage-padding="30" data-lightbox="gallery">
 
-					<div class="oc-item">
-						<a data-lightbox="gallery-item" href="demos/app-landing/images/gallery/img-1.jpg"><img src="demos/app-landing/images/gallery/img-1.jpg" alt="Image 1"></a>
+					<div data-lightbox="gallery-item" class="oc-item">
+								<%= image_tag('prototype/Landing2.png') %>
 					</div>
-					<div class="oc-item">
-						<a data-lightbox="gallery-item" href="demos/app-landing/images/gallery/img-2.jpg"><img src="demos/app-landing/images/gallery/img-2.jpg" alt="Image 2"></a>
+					<div data-lightbox="gallery-item" class="oc-item">
+								<%= image_tag('prototype/Proyectos.png') %>
 					</div>
-					<div class="oc-item">
-						<a data-lightbox="gallery-item" href="demos/app-landing/images/gallery/img-3.jpg"><img src="demos/app-landing/images/gallery/img-3.jpg" alt="Image 3"></a>
+					<div data-lightbox="gallery-item" class="oc-item">
+								<%= image_tag('prototype/Proyecto nuevo.png') %>
 					</div>
-					<div class="oc-item">
-						<a data-lightbox="gallery-item" href="demos/app-landing/images/gallery/img-4.jpg"><img src="demos/app-landing/images/gallery/img-4.jpg" alt="Image 4"></a>
+					<div data-lightbox="gallery-item" class="oc-item">
+								<%= image_tag('prototype/Perfil Empresa.png') %>
 					</div>
-					<div class="oc-item">
-						<a data-lightbox="gallery-item" href="demos/app-landing/images/gallery/img-5.jpg"><img src="demos/app-landing/images/gallery/img-5.jpg" alt="Image 5"></a>
+					<div data-lightbox="gallery-item" class="oc-item">
+								<%= image_tag('prototype/Especificación.png') %>
 					</div>
-					<div class="oc-item">
-						<a data-lightbox="gallery-item" href="demos/app-landing/images/gallery/img-6.jpg"><img src="demos/app-landing/images/gallery/img-6.jpg" alt="Image 5"></a>
+					<div data-lightbox="gallery-item" class="oc-item">
+								<%= image_tag('logo/logocolor.png') %>
 					</div>
-					<div class="oc-item">
-						<a data-lightbox="gallery-item" href="demos/app-landing/images/gallery/img-7.jpg"><img src="demos/app-landing/images/gallery/img-7.jpg" alt="Image 5"></a>
 					</div>
 				</div>
 			</div>
 
 			<div class="clear"></div>
-
-			<div class="section" style="padding: 30px 0; color: #999; background-color: #F8FAFB; border-top: 1px solid #E5E5E5; border-bottom: 1px solid #E5E5E5;">
-				<div class="container clearfix">
-					<div class="row topmargin-lg clearfix">
-
-						<div class="col-lg-4 bottommargin">
-							<i class="i-plain i-large icon-et-browser inline-block" style="margin-bottom: 30px; color: #999;"></i>
-							<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-								<h4 style="font-size: 16px;">Cross Browser</h4>
-							</div>
-							<p class="" style="line-height: 26px;">Canvas 4 Loads Faster &amp; Smoother than the Previous Versions providing an Optimal Experience for your Users.</p>
-						</div>
-
-						<div class="col-lg-4 bottommargin">
-							<i class="i-plain i-large icon-et-adjustments inline-block" style="margin-bottom: 30px; color: #999;"></i>
-							<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-								<h4 style="font-size: 16px;">Flexible Options</h4>
-							</div>
-							<p class="" style="line-height: 26px;">Unleash the Power of Mega Menus by adding Widgets &amp; Mixed Columns powered by the Bootstrap Grid.</p>
-						</div>
-
-						<div class="col-lg-4 bottommargin">
-							<i class="i-plain i-large icon-et-calendar inline-block" style="margin-bottom: 30px; color: #999;"></i>
-							<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-								<h4 style="font-size: 16px;">Scheduled Backups</h4>
-							</div>
-							<p class="" style="line-height: 26px;">Amazing set of New Components giving you Opportunity to Create an Interactive Website for your Business.</p>
-						</div>
-
-						<div class="col-lg-4 bottommargin">
-							<i class="i-plain i-large icon-et-desktop inline-block" style="margin-bottom: 30px; color: #999;"></i>
-							<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-								<h4 style="font-size: 16px;">Responsive Ready</h4>
-							</div>
-							<p class="" style="line-height: 26px;">Convert any Grid to an Isotope Grid easily with Filterable Options making it extremely flexible and powerful.</p>
-						</div>
-
-						<div class="col-lg-4 bottommargin">
-							<i class="i-plain i-large icon-et-bargraph inline-block" style="margin-bottom: 30px; color: #999;"></i>
-							<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-								<h4 style="font-size: 16px;">Increased Conversions</h4>
-							</div>
-							<p class="" style="line-height: 26px;">Display an Alternate Lighter Menu on Responsive Devices with the same Markup Code as before. Awesomely Useful.</p>
-						</div>
-
-						<div class="col-lg-4 bottommargin">
-							<i class="i-plain i-large icon-et-cloud inline-block" style="margin-bottom: 30px; color: #999;"></i>
-							<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-								<h4 style="font-size: 16px;">Cloud Sharing</h4>
-							</div>
-							<p class="" style="line-height: 26px;">Added SPAM Protection for your Precious Forms so that you receive Emails only from Authentic Real Users.</p>
-						</div>
-					</div>
-				</div>
-			</div>
 
 		</div>
 
