--- a/app/views/register_mailer/welcome_email.html.erb
+++ b/app/views/register_mailer/welcome_email.html.erb
@@ -1,1 +1,154 @@
-<h1>Hola</h1>
+<body style="margin: 0; padding: 0;">
+
+<table cellpadding="0" cellspacing="0" border="0" width="100%" style="background: #f3f3f3; min-width: 350px; font-size: 1px; line-height: normal;">
+ 	<tr>
+   	<td align="center" valign="top">
+   		<!--[if (gte mso 9)|(IE)]>
+         <table border="0" cellspacing="0" cellpadding="0">
+         <tr><td align="center" valign="top" width="750"><![endif]-->
+   		<table cellpadding="0" cellspacing="0" border="0" width="750" class="table750" style="width: 100%; max-width: 750px; min-width: 350px; background: #f3f3f3;">
+   			<tr>
+               <td class="mob_pad" width="25" style="width: 25px; max-width: 25px; min-width: 25px;">&nbsp;</td>
+   				<td align="center" valign="top" style="background: #ffffff;">
+
+                  <table cellpadding="0" cellspacing="0" border="0" width="100%" style="width: 100% !important; min-width: 100%; max-width: 100%; background: #f3f3f3;">
+                     <tr>
+                        <td align="right" valign="top">
+                           <div class="top_pad" style="height: 25px; line-height: 25px; font-size: 23px;">&nbsp;</div>
+                        </td>
+                     </tr>
+                  </table>
+
+                  <table cellpadding="0" cellspacing="0" border="0" width="88%" style="width: 88% !important; min-width: 88%; max-width: 88%;">
+                    <%= image_tag('logo/logocolor.png') %>
+                     <tr>
+                        <td align="left" valign="top">
+                           <div style="height: 39px; line-height: 39px; font-size: 37px;">&nbsp;</div>
+
+
+
+                           <div style="height: 73px; line-height: 73px; font-size: 71px;">&nbsp;</div>
+                        </td>
+                     </tr>
+                  </table>
+
+                  <table cellpadding="0" cellspacing="0" border="0" width="88%" style="width: 88% !important; min-width: 88%; max-width: 88%;">
+                     <tr>
+                        <td align="left" valign="top">
+                           <font face="'Source Sans Pro', sans-serif" color="#1a1a1a" style="font-size: 52px; line-height: 60px; font-weight: 300; letter-spacing: -1.5px;">
+                              <span style="font-family: 'Source Sans Pro', Arial, Tahoma, Geneva, sans-serif; color: #1a1a1a; font-size: 52px; line-height: 60px; font-weight: 300; letter-spacing: -1.5px;">Hola <%= @register.name %>,</span>
+                           </font>
+                           <div style="height: 33px; line-height: 33px; font-size: 31px;">&nbsp;</div>
+                           <font face="'Source Sans Pro', sans-serif" color="#585858" style="font-size: 24px; line-height: 32px;">
+                              <span style="font-family: 'Source Sans Pro', Arial, Tahoma, Geneva, sans-serif; color: #585858; font-size: 24px; line-height: 32px;">Como equipo de Spec Atelier te agradecemos el interés en la plataforma. Siéntete en confianza de contactarnos a este mismo correo en caso de dudas o consultas. Estaremos felices de atender tu requerimiento.</span>
+                           </font>
+                           <div style="height: 20px; line-height: 20px; font-size: 18px;">&nbsp;</div>
+                           <font face="'Source Sans Pro', sans-serif" color="#585858" style="font-size: 24px; line-height: 32px;">
+                              <span style="font-family: 'Source Sans Pro', Arial, Tahoma, Geneva, sans-serif; color: #585858; font-size: 24px; line-height: 32px;">Estamos próximos a lanzar la plataforma en su versión final, y serás de los primeros/as en enterarte.</span>
+                           </font>
+                           <div style="height: 33px; line-height: 33px; font-size: 31px;">&nbsp;</div>
+                           <table class="mob_btn" cellpadding="0" cellspacing="0" border="0" style="background: #27cbcc; border-radius: 4px;">
+                           </table>
+                           <div style="height: 75px; line-height: 75px; font-size: 73px;">&nbsp;</div>
+                        </td>
+                     </tr>
+                  </table>
+
+                  <table cellpadding="0" cellspacing="0" border="0" width="90%" style="width: 90% !important; min-width: 90%; max-width: 90%; border-width: 1px; border-style: solid; border-color: #e8e8e8; border-bottom: none; border-left: none; border-right: none;">
+                     <tr>
+                        <td align="left" valign="top">
+                           <div style="height: 15px; line-height: 15px; font-size: 13px;">&nbsp;</div>
+                        </td>
+                     </tr>
+                  </table>
+
+                  <table cellpadding="0" cellspacing="0" border="0" width="88%" style="width: 88% !important; min-width: 88%; max-width: 88%;">
+                     <tr>
+                        <td align="center" valign="top">
+                           <!--[if (gte mso 9)|(IE)]>
+                           <table border="0" cellspacing="0" cellpadding="0">
+                           <tr><td align="center" valign="top" width="50"><![endif]-->
+                           <div style="display: inline-block; vertical-align: top; width: 50px;">
+                              <table cellpadding="0" cellspacing="0" border="0" width="100%" style="width: 100% !important; min-width: 100%; max-width: 100%;">
+                                 <tr>
+                                    <td align="center" valign="top">
+                                       <div style="height: 13px; line-height: 13px; font-size: 11px;">&nbsp;</div>
+                                       <div style="display: block; max-width: 50px;">
+                                          <img src="img/rad.png" alt="img" width="50" border="0" style="display: block; width: 50px;" />
+                                       </div>
+                                    </td>
+                                 </tr>
+                              </table>
+                           </div><!--[if (gte mso 9)|(IE)]></td><td align="left" valign="top" width="390"><![endif]--><div class="mob_div" style="display: inline-block; vertical-align: top; width: 62%; min-width: 260px;">
+                              <table cellpadding="0" cellspacing="0" border="0" width="100%" style="width: 100% !important; min-width: 100%; max-width: 100%;">
+                                 <tr>
+                                    <td width="18" style="width: 18px; max-width: 18px; min-width: 18px;">&nbsp;</td>
+                                    <td class="mob_center" align="left" valign="top">
+                                       <div style="height: 13px; line-height: 13px; font-size: 11px;">&nbsp;</div>
+                                       <font face="'Source Sans Pro', sans-serif" color="#000000" style="font-size: 19px; line-height: 23px; font-weight: 600;">
+                                          <span style="font-family: 'Source Sans Pro', Arial, Tahoma, Geneva, sans-serif; color: #000000; font-size: 19px; line-height: 23px; font-weight: 600;">Equipo Spec Atelier</span>
+                                       </font>
+                                       <div style="height: 1px; line-height: 1px; font-size: 1px;">&nbsp;</div>
+                                       <font face="'Source Sans Pro', sans-serif" color="#7f7f7f" style="font-size: 19px; line-height: 23px;">
+                                          <span style="font-family: 'Source Sans Pro', Arial, Tahoma, Geneva, sans-serif; color: #7f7f7f; font-size: 19px; line-height: 23px;">¡Muchas gracias!</span>
+                                       </font>
+                                    </td>
+                                    <td width="18" style="width: 18px; max-width: 18px; min-width: 18px;">&nbsp;</td>
+                                 </tr>
+                              </table>
+                           </div><!--[if (gte mso 9)|(IE)]></td><td align="left" valign="top" width="177"><![endif]--><div style="display: inline-block; vertical-align: top; width: 177px;">
+                              <table cellpadding="0" cellspacing="0" border="0" width="100%" style="width: 100% !important; min-width: 100%; max-width: 100%;">
+                                 <tr>
+                                    <td align="center" valign="top">
+                                       <div style="height: 13px; line-height: 13px; font-size: 11px;">&nbsp;</div>
+                                       <div style="display: block; max-width: 177px;">
+                                       </div>
+                                    </td>
+                                 </tr>
+                              </table>
+                           </div>
+                           <!--[if (gte mso 9)|(IE)]>
+                           </td></tr>
+                           </table><![endif]-->
+                           <div style="height: 30px; line-height: 30px; font-size: 28px;">&nbsp;</div>
+                        </td>
+                     </tr>
+                  </table>
+
+                  <table cellpadding="0" cellspacing="0" border="0" width="100%" style="width: 100% !important; min-width: 100%; max-width: 100%; background: #f3f3f3;">
+                     <tr>
+                        <td align="center" valign="top">
+                           <div style="height: 34px; line-height: 34px; font-size: 32px;">&nbsp;</div>
+                           <table cellpadding="0" cellspacing="0" border="0" width="88%" style="width: 88% !important; min-width: 88%; max-width: 88%;">
+                              <tr>
+                                 <td align="center" valign="top">
+                                    <table cellpadding="0" cellspacing="0" border="0" width="78%" style="min-width: 300px;">
+
+                                    </table>
+                                    <div style="height: 34px; line-height: 34px; font-size: 32px;">&nbsp;</div>
+                                    <div style="height: 3px; line-height: 3px; font-size: 1px;">&nbsp;</div>
+                                    <font face="'Source Sans Pro', sans-serif" color="#1a1a1a" style="font-size: 17px; line-height: 20px;">
+                                       <span style="font-family: 'Source Sans Pro', Arial, Tahoma, Geneva, sans-serif; color: #1a1a1a; font-size: 17px; line-height: 20px;"><a href="www.specatelier.com" target="_blank" style="font-family: 'Source Sans Pro', Arial, Tahoma, Geneva, sans-serif; color: #1a1a1a; font-size: 17px; line-height: 20px; text-decoration: none;">www.specatelier.com</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+                                    </font>
+                                    <div style="height: 35px; line-height: 35px; font-size: 33px;">&nbsp;</div>
+                                    <table cellpadding="0" cellspacing="0" border="0">
+                                    </table>
+                                    <div style="height: 35px; line-height: 35px; font-size: 33px;">&nbsp;</div>
+                                 </td>
+                              </tr>
+                           </table>
+                        </td>
+                     </tr>
+                  </table>
+
+               </td>
+               <td class="mob_pad" width="25" style="width: 25px; max-width: 25px; min-width: 25px;">&nbsp;</td>
+            </tr>
+         </table>
+         <!--[if (gte mso 9)|(IE)]>
+         </td></tr>
+         </table><![endif]-->
+      </td>
+   </tr>
+</table>
+</body>
