--- a/app/views/registers/new.html.erb
+++ b/app/views/registers/new.html.erb
@@ -111,7 +111,7 @@
 							<img src="demos/app-landing/images/section/section-1-icon.png" alt="" style="display: block;" class="bottommargin-sm">
 							<div class="emphasis-title bottommargin-sm">
 								<span class="before-heading">Facil y rápido</span>
-								<h2 style="font-size: 42px;" class="font-body ls1 t400">Autmatiza</h2>
+								<h2 style="font-size: 42px;" class="font-body ls1 t400">Automatiza</h2>
 							</div>
 							<p style="color: #777;" class="lead">Construye tu especificación con documentación e información técnica de las principales soluciones constructivas y productos.</p>
 						</div>
@@ -212,7 +212,7 @@
 						</div>
 						<div class="col-lg-5 col-md-6">
 							<h4 class="font-body" style="margin-bottom:15px;">¿En que etapa está la plataforma?</h4>
-							<p class="nobottommargin">Reprehenderit similique nemo voluptate ullam natus illum magnam alias nobis doloremque delectus ipsa dicta repellat maxime dignissimos eveniet quae debitis ratione assumenda tempore officiis fugiat dolor.</p>
+							<p class="nobottommargin">Luego de dos prototipos validados, nos encontramos en la fase final de diseño de nuestro constructor de especificaciones y algoritmo. Contamos con un equipo de diseño UX y programación que busca la mejor experiencia de usuario.</p>
 						</div>
 						<div class="col-lg-5 offset-lg-1 col-md-6 bottommargin-sm">
 							<h4 class="font-body" style="margin-bottom:15px;">¿Como puedo ser usuario o proveedor estrategico y participar de la marcha blanca?</h4>
